@@ -3948,22 +3948,9 @@ in Emacs."
       nil))
 
 (defun macro-indentation (arglist)
-  (labels ((walk (list &optional base)
-             (when (consp list)
-               (let ((head (car list))
-                     (n (if base 4 1)))
-                 (cond ((consp head)
-                        (let ((indent (walk head)))
-                          (cons (list* "&whole" n indent) (walk (cdr list) base))))
-                       ((eq '&body head)
-                        '("&body"))
-                       ((member head lambda-list-keywords)
-                        (if (member head '(&rest &key))
-                            (list "&rest" n)
-                            (walk (cdr list) base)))
-                       (t
-                        (cons n (walk (cdr list) base))))))))
-    (walk arglist t)))
+  (if (well-formed-list-p arglist)
+      (position '&body (remove '&optional (clean-arglist arglist)))
+      nil))
 
 (defun clean-arglist (arglist)
   "Remove &whole, &enviroment, and &aux elements from ARGLIST."
