@@ -1,3 +1,9 @@
+2011-06-16  Nikodemus Siivola  <nikodemus@random-state.net>
+
+	* swank-indentation.lisp (macro-indentation): More complex
+	version than the default. Fixes some of the misbehaviour of
+	the previous complex version.
+
 2011-06-15  Stas Boukarev  <stassats@gmail.com>
 
 	* slime-scheme.el (slime-scheme-indentation-update):
